css/philosophy_main.css
/* ... */
@media only screen and (max-width:400px) {
   html {
      font-size: 9.375px;
   }

}

html, body {
   height: 100%;
}

body {
   background: #19191b;
   font-family: "roboto", sans-serif;
   font-size: 1.6rem;
   font-style: normal;
   font-weight: 400;
   line-height: 1.875;
   color: #656565;
   margin: 0;
   padding: 0;
}


/* ------------------------------------------------------------------- 
 * ## links
 * ------------------------------------------------------------------- */
/*a {*/
   /*color: #0054a5;*/
   /*-webkit-transition: all 0.3s ease-in-out;*/
   /*transition: all 0.3s ease-in-out;*/
/*}*/

/*a:hover, a:focus, a:active {*/
   /*color: #000000;*/
/*}*/

/*a:hover, a:active {*/
   /*outline: 0;*/
/*}*/



/* ===================================================================
 * # typography & general theme styles
 * 
 * ------------------------------------------------------------------- */
h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   font-family: "work-sans", sans-serif;
   color: #000000;
   font-style: normal;
   font-weight: 600;
   text-rendering: optimizeLegibility;
}

h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
   margin-top: 6rem;
   margin-bottom: 1.8rem;
}

@media only screen and (max-width:600px) {
   h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
      margin-top: 5.1rem;
   }

}

h5, .h5, h6, .h6 {
   margin-top: 4.2rem;
   margin-bottom: 1.5rem;
}

@media only screen and (max-width:600px) {
   h5, .h5, h6, .h6 {
      margin-top: 3.6rem;
      margin-bottom: 0.9rem;
   }

}

h1, .h1 {
   font-size: 3.6rem;
   line-height: 1.25;
   letter-spacing: -.1rem;
}

@media only screen and (max-width:600px) {
   h1, .h1 {
      font-size: 3.3rem;
      letter-spacing: -.07rem;
   }

}

h2, .h2 {
   font-size: 3rem;
   line-height: 1.3;
}

@media only screen and (max-width:600px) {
   h2, .h2 {
      font-size: 2.8rem;
   }

}

h3, .h3 {
   font-size: 2.4rem;
   line-height: 1.25;
}

h4, .h4 {
   font-size: 2.1rem;
   line-height: 1.286;
}

h5, .h5 {
   font-size: 1.6rem;
   line-height: 1.313;
}

h6, .h6 {
   font-size: 1.3rem;
   line-height: 1.385;
   text-transform: uppercase;
   letter-spacing: .16rem;
}

p img {
   margin: 0;
}

p.lead {
   font-family: "roboto", sans-serif;
   font-size: 2rem;
   line-height: 1.8;
   margin-bottom: 3.6rem;
   color: #000000;
}

@media only screen and (max-width:800px) {
   p.lead {
      font-size: 1.8rem;
   }

}

em, i, strong, b {
   font-size: inherit;
   line-height: inherit;
   font-style: normal;
   font-weight: normal;
}

em, i {
   font-family: "roboto", sans-serif;
}

strong, b {
   font-family: "roboto", sans-serif;
}

small {
   font-size: 1.2rem;
   line-height: inherit;
}

blockquote {
   margin: 3.9rem 0;
   padding-left: 4.5rem;
   position: relative;
}

blockquote:before {
   content: "\201C";
   font-size: 10rem;
   line-height: 0px;
   margin: 0;
   color: rgba(0, 0, 0, 0.25);
   font-family: arial, sans-serif;
   position: absolute;
   top: 3.6rem;
   left: 0;
}

blockquote p {
   font-family: "roboto", sans-serif;
   padding: 0;
   font-size: 2.1rem;
   line-height: 1.857;
   color: #000000;
}

blockquote cite {
   display: block;
   font-family: "roboto", sans-serif;
   font-size: 1.5rem;
   font-style: normal;
   line-height: 1.4;
}

blockquote cite:before {
   content: "\2014 \0020";
}

blockquote cite a, blockquote cite a:visited {
   color: #727272;
   border: none;
}

abbr {
   font-family: "roboto", sans-serif;
   font-variant: small-caps;
   text-transform: lowercase;
   letter-spacing: .05rem;
   color: #727272;
}

var, kbd, samp, code, pre {
   font-family: Consolas, "Andale Mono", Courier, "Courier New", monospace;
}

pre {
   padding: 2.4rem 3rem 3rem;
   background: #F1F1F1;
   overflow-x: auto;
}

code {
   font-size: 1.4rem;
   margin: 0 .2rem;
   padding: .3rem .6rem;
   white-space: nowrap;
   background: #e5e5e5;
   border: 1px solid #d8d8d8;
   border-radius: 3px;
}

pre > code {
   display: block;
   white-space: pre;
   line-height: 2;
   padding: 0;
   margin: 0;
}

pre.prettyprint > code {
   border: none;
}

del {
   text-decoration: line-through;
}

abbr[title], dfn[title] {
   border-bottom: 1px dotted;
   cursor: help;
   text-decoration: none;
}

mark {
   background: #ffd900;
   color: #000000;
}

hr {
   border: solid rgba(0, 0, 0, 0.1);
   border-width: 1px 0 0;
   clear: both;
   margin: 2.4rem 0 1.5rem;
   height: 0;
}


/* ------------------------------------------------------------------- 
 * ## Lists
 * ------------------------------------------------------------------- */
ol {
   list-style: decimal;
}

ul {
   list-style: disc;
}

li {
   display: list-item;
}

ol, ul {
   margin-left: 1.7rem;
}

ul li {
   padding-left: .4rem;
}

ul ul, ul ol, ol ol, ol ul {
   margin: .6rem 0 .6rem 1.7rem;
}

ul.disc li {
   display: list-item;
   list-style: none;
   padding: 0 0 0 .8rem;
   position: relative;
}

ul.disc li::before {
   content: "";
   display: inline-block;
   width: 8px;
   height: 8px;
   border-radius: 50%;
   background: #0054a5;
   position: absolute;
   left: -17px;
   top: 11px;
   vertical-align: middle;
}

dt {
   margin: 0;
   color: #0054a5;
}

dd {
   margin: 0 0 0 2rem;
}


/* ------------------------------------------------------------------- 
 * ## responsive video container
 * ------------------------------------------------------------------- */
.video-container {
   position: relative;
   padding-bottom: 56.25%;
   height: 0;
   overflow: hidden;
}

.video-container iframe,
.video-container object,
.video-container embed,
.video-container video {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
}


/* ------------------------------------------------------------------- 
 * ## floated image
 * ------------------------------------------------------------------- */
img.pull-right {
   margin: 1.5rem 0 0 3rem;
}

img.pull-left {
   margin: 1.5rem 3rem 0 0;
}
/* ... */

